name:                concorde
version:             0.1
license:             BSD3
license-file:        LICENSE
synopsis:            FIXME
category:            FIXME
author:              Keegan McAllister <mcallister.keegan@gmail.com>
maintainer:          Keegan McAllister <mcallister.keegan@gmail.com>
build-type:          Simple
cabal-version:       >=1.6
description:
    FIXME

extra-source-files:
    README

library
  exposed-modules:
      Algorithms.Concorde.LinKern
  ghc-options:      -Wall
  build-depends:
      base       >= 3 && < 5
    , containers >= 0.4
    , temporary  >= 1.1
    , process    >= 1.0
    , safe       >= 0.3

source-repository head
    type:     git
    location: git://github.com/kmcallister/concorde
